# docker-monorepo

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  wrangler.toml
.github/: dependabot.yml
.github/scripts/: tag-image.sh
.github/workflows/: caddy-build-optimized.yml  caddy-cloudflaredns-build-optimized.yml  caddy-cloudflaredns-build.yml  caddy-cloudflaredns.yml  coding-agent-build-optimized.yml  dependabot-automerge.yml  deploy-docs.yml  jenkins-update-check.yml  jenkinsapi-build-optimized.yml  jenkinsapi.yml  llm-bot-build-optimized.yml  ollama-build-optimized.yml  release-on-tag.yml  test-all.yml  version-check.yml  weekly-release.yml
caddy-cloudflaredns/: Dockerfile  Makefile  README.md
caddy-cloudflaredns/test/: test-image.sh
coding-agent/: .dockerignore  .env.example  BUILD_NOTES.md  Dockerfile  Makefile  README.md  docker-compose.yml
coding-agent/config/: README.md  custom-settings.json
coding-agent/scripts/: claude-cloud.sh  claude-local.sh  claude-status.sh  download-model.sh  setup-claude-switcher.sh
coding-agent/test/: test-image.sh
docs/: README.md  astro.config.mjs  package.json  wrangler.toml
docs/src/: README.md
jenkinsapi/: Dockerfile  Dockerfile.test  JENKINS_VERSION  Makefile  README.md  plugins.txt  pyproject.toml
jenkinsapi/scripts/: update-plugins.sh
jenkinsapi/test/: test-image.sh
llm-bot/: Dockerfile  Makefile  README.md  start.sh  vllm-config.json
ollama/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  start.sh  vllm-config.json
(+8 files in other folders)
